# second-brain-ultimatum

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  memory-archive.md  memory.md  opencode.json  pyproject.toml
.claude/: settings.json  settings.local.json
agents/: README.md  code-review-architecture.md  code-review-performance.md  code-review-security.md  code-review-type-safety.md  plan-validator.md  research-codebase.md  research-external.md  specialist-copywriter.md  specialist-data.md  specialist-devops.md  specialist-tech-writer.md  test-generator.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
commands/: agents.md  code-review-fix.md  commit.md  create-pr.md  create-prd.md  execute.md  execution-report.md  implement-fix.md  init-c.md  planning.md  prime.md  rca.md  system-review.md
frontend/: .dockerignore  Dockerfile  api_client.py  app.py  config.py  requirements.txt  test_integration.py
reference/: agent-teams-overview.md  archon-workflow.md  command-design-framework.md  command-design-overview.md  cross-cli-orchestration.md  file-structure.md  git-worktrees-parallel.md  github-integration.md  github-orchestration.md  global-rules-optimization.md  implementation-discipline.md  layer1-guide.md  mcp-skills-archon.md  mcp-skills-overview.md  multi-instance-routing.md  multi-model-strategy.md  piv-loop-practice.md  planning-methodology-guide.md  remote-agentic-system.md  subagents-deep-dive.md  subagents-guide.md  system-foundations.md  tmux-recommended-config.md  validation-discipline.md
requests/: command-completion-enhancement-plan.md  context-budget-v3-plan.md  mem0-to-memory-migration-plan.md  memory-provider-abstraction-plan-01-foundation.md  memory-provider-abstraction-plan-02-graphiti-adapter.md  memory-provider-abstraction-plan-03-wiring.md  memory-provider-abstraction-plan-04-tests.md  multi-user-profiles-plan.md  (+6 more)
(+387 files in other folders)
